Add configurable API rate limiting middleware

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -5,6 +5,10 @@ JWT_ACCESS_SECRET=replace-with-a-long-random-string-32-plus-characters
 JWT_REFRESH_SECRET=replace-with-a-different-long-random-string-32-plus-characters
 ACCESS_TOKEN_TTL=15m
 REFRESH_TOKEN_DAYS=30
+AUTH_RATE_LIMIT_WINDOW_MS=60000
+AUTH_RATE_LIMIT_MAX=10
+API_RATE_LIMIT_WINDOW_MS=60000
+API_RATE_LIMIT_MAX=120
 SEED_ADMIN_EMAIL=admin@adfix.local
 SEED_ADMIN_NAME=Adfix Admin
 SEED_ADMIN_PASSWORD=ChangeMe123!
