Add API docs, request IDs, DB health checks, validation standardization, and seed profiles

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -9,6 +9,7 @@ AUTH_RATE_LIMIT_WINDOW_MS=60000
 AUTH_RATE_LIMIT_MAX=10
 API_RATE_LIMIT_WINDOW_MS=60000
 API_RATE_LIMIT_MAX=120
+SEED_PROFILE=admin_only
 SEED_ADMIN_EMAIL=admin@adfix.local
 SEED_ADMIN_NAME=Adfix Admin
 SEED_ADMIN_PASSWORD=ChangeMe123!
