--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "npm --workspace @adfix/api run typecheck",
     "db:migrate": "npm --workspace @adfix/api run db:migrate",
     "db:seed": "npm --workspace @adfix/api run db:seed",
+    "db:seed:demo": "npm --workspace @adfix/api run db:seed:demo",
     "test:api": "npm --workspace @adfix/api run test",
     "test:api:coverage": "npm --workspace @adfix/api run test:coverage"
   }
