--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,32 @@ jobs:
       - name: Typecheck API
         run: npm run typecheck
 
+  api-openapi-artifact:
+    runs-on: ubuntu-latest
+    needs: api-typecheck
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: npm
+
+      - name: Install
+        run: npm install
+
+      - name: Export OpenAPI spec
+        run: npm run openapi:export
+
+      - name: Upload OpenAPI artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: api-openapi-v1
+          path: apps/api/openapi/openapi.v1.json
+          if-no-files-found: error
+
   api-integration-tests:
     runs-on: ubuntu-latest
     services:
