--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:migrate": "npm --workspace @adfix/api run db:migrate",
     "db:seed": "npm --workspace @adfix/api run db:seed",
     "db:seed:demo": "npm --workspace @adfix/api run db:seed:demo",
+    "openapi:export": "npm --workspace @adfix/api run openapi:export",
     "test:api": "npm --workspace @adfix/api run test",
     "test:api:coverage": "npm --workspace @adfix/api run test:coverage"
   }
